--- a/dev/kube-prometheus/chart.yaml
+++ b/dev/kube-prometheus/chart.yaml
@@ -1,6 +1,18 @@
 apiVersion: v2
 name: grafana
 kind: Kustomization
+metadata:
+  labels:
+    app.kubernetes.io/component: grafana
+    app.kubernetes.io/name: grafana
+    app.kubernetes.io/part-of: kube-prometheus
+    app.kubernetes.io/version: 11.4.0
+  name: grafana-config
+  namespace: monitoring
+stringData:
+  grafana.ini: |
+    [date_formats]
+    default_timezone = UTC
 version: 8.8.2
 appVersion: 11.4.0
 kubeVersion: "^1.8.0-0"
