--- a/dev/kube-prometheus/chart.yaml
+++ b/dev/kube-prometheus/chart.yaml
@@ -13,23 +13,4 @@ stringData:
   grafana.ini: |
     [date_formats]
     default_timezone = UTC
-version: 8.8.2
-appVersion: 11.4.0
-kubeVersion: "^1.8.0-0"
-description: The leading tool for querying and visualizing time series and metrics.
-home: https://grafana.com
-icon: https://artifacthub.io/image/b4fed1a7-6c8f-4945-b99d-096efa3e4116
-sources:
-  - https://github.com/grafana/grafana
-  - https://github.com/grafana/helm-charts
-annotations:
-  "artifacthub.io/license": Apache-2.0
-  "artifacthub.io/links": |
-    - name: Chart Source
-      url: https://github.com/grafana/helm-charts
-    - name: Upstream Project
-      url: https://github.com/grafana/grafana
-type: application
-keywords:
-  - monitoring
-  - metric
+type: Opaque
