--- a/dev/kube-prometheus/chart.yaml
+++ b/dev/kube-prometheus/chart.yaml
@@ -1,16 +1,19 @@
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-name: grafana
-kind: Kustomization
+apiVersion: v1
+kind: Service
 metadata:
   labels:
     app.kubernetes.io/component: grafana
     app.kubernetes.io/name: grafana
     app.kubernetes.io/part-of: kube-prometheus
     app.kubernetes.io/version: 11.4.0
-  name: grafana-config
+  name: grafana
   namespace: monitoring
-stringData:
-  grafana.ini: |
-    [date_formats]
-    default_timezone = UTC
-type: Opaque
+spec:
+  ports:
+  - name: http
+    port: 3000
+    targetPort: http
+  selector:
+    app.kubernetes.io/component: grafana
+    app.kubernetes.io/name: grafana
+    app.kubernetes.io/part-of: kube-prometheus
